--- a/Areas/Admin/Views/AdminAccount/Register.cshtml
+++ b/Areas/Admin/Views/AdminAccount/Register.cshtml
@@ -1,8 +1,8 @@
-﻿@model Stationery.Models.Admin.AdminRegisterViewModel
+﻿@using Stationery.Areas.Admin.Models
+@model AdminRegisterViewModel
 
 @{
     ViewData["Title"] = "Admin Register";
-    Layout = "~/Views/Shared/_Layout.cshtml"; // Use your main layout for now
 }
 
 <h1>Admin Register</h1>
