--- a/Views/Shared/Components/CategorySidebar/Default.cshtml
+++ b/Views/Shared/Components/CategorySidebar/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Stationery.Models.Category>
+﻿@model IEnumerable<Category>
 
 <div class="sidebar-categories">
     <ul class="list-group">
