--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
 						</a>
 						<a class="btn btn-secondary" asp-controller="Account" asp-action="AdminRegister">
 							@* Adjust style as needed *@
-							<i class="bi bi-person-fill-gear me-2"></i>Admin Register
+							<i class="bi bi-person-fill-gear me-2"></i>Зареєструвати Адміністратора
 						</a>
 					}
 				</div>
